<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="0dp">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_btn_text"
        android:id="@+id/backBtn"
        android:fontFamily="@string/abc_font_family_button_material"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="@color/colorPrimaryDark"
        android:alpha="0.9"
        style="@style/LightTextWithShadow" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout2">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/logo_text_1"
            android:id="@+id/д"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            style="@style/LogoText1"/>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/radioTitleLogo"
            android:src="@drawable/mir_play_logo"
            android:contentDescription="@string/main_logo_desc"
            android:layout_weight="0.20"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="3dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:text="@string/logo_text_2"
            android:id="@+id/radioTitle2"
            style="@style/LogoText2"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.8"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/default_radio_meta"
            android:id="@+id/currentSong"
            android:layout_gravity="center"
            style="@style/LightTextWithShadow" />
    </FrameLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/emptyLogo"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/empty_logo"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioPlayBtn"
        android:src="@drawable/radio_play_btn"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioLoadingStatus"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:indeterminateDrawable="@drawable/spinner_ring_light"
        android:indeterminateOnly="true"
        android:indeterminate="false"
        android:visibility="invisible" />

</RelativeLayout>